try to fix menu logo (too big)

--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ header {
 	position:fixed;
 	z-index:9999;
 	height:80px;
+	width:80px;
 }
 
 .navmenu ul li {
